--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 /.idea
 db.sqlite3
 /static
+.idea/
+local_settings.py
+venv
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+# Ignore Django Migrations in Development if you are working on team
+# Only for Development only
+**/migrations/**
+# !**/migrations
+!**/migrations/__init__.py
